# services/routine/docs/swagger.json
@@ -26,43 +26,35 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "author of act",
-                        "name": "author",
-                        "in": "formData",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "name of act",
-                        "name": "name",
-                        "in": "formData",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "type of act",
-                        "name": "actType",
-                        "in": "formData",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "text of act",
-                        "name": "text",
-                        "in": "formData",
-                        "required": true
-                    },
-                    {
-                        "type": "file",
-                        "description": "images of act",
-                        "name": "images",
-                        "in": "formData"
-                    },
-                    {
-                        "type": "string",
                         "description": "lifthus_st",
                         "name": "Authorization",
                         "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "create act dto",
+                        "name": "creatActDto",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.CreateActRequestDto"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/act/upgarde": {
+            "post": {
+                "tags": [
+                    ""
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "author of act",
+                        "name": "author",
+                        "in": "formData",
                         "required": true
                     }
                 ],
@@ -97,6 +89,62 @@
                     "500": {
                         "description": "internal server error"
                     }
+                }
+            }
+        },
+        "/images/{target}": {
+            "post": {
+                "tags": [
+                    ""
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "images for target",
+                        "name": "target",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "file",
+                        "description": "images of act",
+                        "name": "images",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "lifthus_st",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        }
+    },
+    "definitions": {
+        "dto.CreateActRequestDto": {
+            "type": "object",
+            "properties": {
+                "actType": {
+                    "type": "string"
+                },
+                "author": {
+                    "type": "string"
+                },
+                "imageSrcs": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "name": {
+                    "type": "string"
+                },
+                "text": {
+                    "type": "string"
                 }
             }
         }
