# services/routine/internal/app/command/act/controller.go
@@ -23,12 +23,8 @@ type actCommandController struct {
 
 // createAct godoc
 // @Router /act [post]
-// @Param author formData string true "author of act"
-// @Param name formData string true "name of act"
-// @param actType formData string true "type of act"
-// @Param text formData string true "text of act"
-// @Param images formData file false "images of act"
 // @Param Authorization header string true "lifthus_st"
+// @Param creatActDto body dto.CreateActRequestDto true "create act dto"
 // @Summary
 // @Tags
 // Success 201 "returns created Act"
@@ -37,25 +33,25 @@ type actCommandController struct {
 // Failure 403 "forbidden"
 // Failure 500 "failed to create Act"
 func (ac *actCommandController) createAct(c echo.Context) error {
-	locations, err := getMultipartFormAndUploadActImagesToRoutineS3(c)
-	if err != nil {
-		log.Printf("failed to upload images to routine s3: %v", err)
-		return c.String(http.StatusInternalServerError, "failed to upload images to routine s3")
+	reqDto := dto.CreateActRequestDto{}
+	if err := c.Bind(&reqDto); err != nil {
+		log.Printf("failed to bind request: %v", err)
+		return c.String(http.StatusBadRequest, "invalid request")
 	}
 
-	dto, err := parseFormAndGenerateCreateActDto(c, locations)
+	svcDto, err := reqDto.ToServiceDto()
 	if err != nil {
-		log.Printf("constructing CreateActDto failed: %v", err)
-		return c.String(http.StatusBadRequest, "failed to construct dto")
+		log.Printf("failed to convert to service dto: %v", err)
+		return c.String(http.StatusBadRequest, "invalid request")
 	}
 
 	clientId := c.Get("uid").(uint64)
-	if dto.Author != clientId {
+	if svcDto.Author != clientId {
 		log.Printf("illegal access: %v", err)
 		return c.String(http.StatusForbidden, "illegal access")
 	}
 
-	act, err := ac.svc.createAct(c.Request().Context(), *dto)
+	act, err := ac.svc.createAct(c.Request().Context(), *svcDto)
 	if err != nil {
 		log.Printf("failed to create Act: %v", err)
 		return c.String(http.StatusInternalServerError, "failed to create Act")
@@ -81,6 +77,6 @@ func (ac *actCommandController) upgradeAct(c echo.Context) error {
 	// //err := c.Bind(&uaDto)
 	// //if err != nil
 	clientId := c.Get("uid").(uint64)
-	ac.svc.upgradeAct(c.Request().Context(), clientId, dto.UpgradeActDto{})
+	ac.svc.upgradeAct(c.Request().Context(), clientId, dto.UpgradeActServiceDto{})
 	return nil
 }
