# services/routine/internal/app/dto/act.go
@@ -6,18 +6,54 @@ import (
 	"time"
 )
 
-type CreateActDto struct {
-	ActType   string `json:"actType"`
-	Name      string `json:"name"`
-	Author    uint64 `json:"author"`
-	Text      string `json:"text"`
+type CreateActRequestDto struct {
+	ActType   string   `json:"actType"`
+	Name      string   `json:"name"`
+	Author    string   `json:"author"`
+	Text      string   `json:"text"`
+	ImageSrcs []string `json:"imageSrcs"`
+}
+
+func (ca CreateActRequestDto) ToServiceDto() (*CreateActServiceDto, error) {
+	author, err := strconv.ParseUint(ca.Author, 10, 64)
+	if err != nil {
+		return nil, err
+	}
+	return &CreateActServiceDto{
+		ActType:   ca.ActType,
+		Name:      ca.Name,
+		Author:    author,
+		Text:      ca.Text,
+		ImageSrcs: ca.ImageSrcs,
+	}, nil
+}
+
+type CreateActServiceDto struct {
+	ActType   string
+	Name      string
+	Author    uint64
+	Text      string
 	ImageSrcs []string
 }
 
-type UpgradeActDto struct {
+type UpgradeActRequestDto struct {
 	ActCode   string   `json:"actCode"`
 	Text      string   `json:"text"`
 	ImageSrcs []string `json:"imageSrcs"`
+}
+
+func (ua UpgradeActRequestDto) ToServiceDto() *UpgradeActServiceDto {
+	return &UpgradeActServiceDto{
+		ActCode:   ua.ActCode,
+		Text:      ua.Text,
+		ImageSrcs: ua.ImageSrcs,
+	}
+}
+
+type UpgradeActServiceDto struct {
+	ActCode   string
+	Text      string
+	ImageSrcs []string
 }
 
 func QueryActDtoFrom(target *act.Act) *QueryActDto {
